# Cmusic

./: CMakeLists.txt  README.md  app.js  common.h  doc_proto_tcp  dropEvent.c  dropEvent.h  flag_thread.h  initMedia.c  initMedia.h  inputText.c  inputText.h  lecteur_audio.c  lecteur_audio.h  main.c  main5.c  mouseButton.c  mouseButton.h  package-lock.json  package.json  render.c  render.h  script_tempo.c  tcp.c  tcp.h  temp.c  temp.h  viewport.c  viewport.h
Ressources/: text.txt
Ressources/img/: void.png.sb-57ee44b8-rabND0
bdd-js/: bdd.sql  data.sql  index.js  package.json
ftp/: client.c  index.js
src/: core_ctx.js  core_utils.js  rtmp_server.js  rtmp_session.js  server.js
src/core/: core_amf.js  core_av.js  core_bitop.js  core_utils.js
src/mysql/config/: bdd.sql  mysql.js
src/mysql/controllers/: artiste.js  musique.js  playlist.js
src/mysql/models/: artiste.js  musique.js  playlist.js
src/rtmp/: rtmp_handshake.js  rtmp_server.js  rtmp_session.js
src/tcp/: tcp_server.js  tcp_session.js
